added details about format of case report

--- a/templates/pages/placeholder.about.html
+++ b/templates/pages/placeholder.about.html
@@ -1,14 +1,102 @@
 {% extends 'layouts/main.html' %}
-{% block title %}About{% endblock %}
+{% block title %}Case Report Instructions{% endblock %}
 {% block content %}
 
 <div class="page-header">
-  <h1>About Page</h1>
+  <h1>Case Report Form Instructions</h1>
 </div>
-<p class="lead">This is just a placeholder page which should be replaced with real content.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tellus ligula, imperdiet id lobortis sit amet, scelerisque non sapien. Duis quis dui quis mauris dapibus fringilla. Pellentesque nec tellus ac diam volutpat malesuada.</p>
-<p>In quam arcu, interdum vel arcu viverra, vulputate convallis massa. Sed hendrerit velit a arcu euismod, sit amet consequat lacus imperdiet. Nullam quis dui sapien. Vestibulum placerat, justo non fringilla laoreet, dui ipsum posuere nisi, nec vestibulum eros leo ut sapien.</p>
-<p>Vivamus eu felis sed magna scelerisque semper in et libero. Curabitur sed convallis odio, quis venenatis sapien. In convallis a velit ac commodo. Donec sapien ligula, vestibulum ut nisi accumsan, facilisis pretium est. Fusce varius semper orci, et egestas nulla cursus a. Phasellus aliquam, mi ac adipiscing lobortis, ipsum augue aliquam ligula, quis fermentum mi augue vel ligula.</p>
-<p>Integer elementum malesuada dolor in aliquet.</p>
+
+<p class="lead">
+Please send in prime cases of your career and win the best prizes in each category ( 10 categories).<br><br>
+ 
+<span style="color:brown"><b>The cases which are not shortlisted for oral presentation will be considered for poster presentation.</b></span><br><br>
+
+Note: All the cases discussed in the conference will be published in an indexed journal-JMSR.<br><br>
+
+<span style="color:red"><b>Last date of submission : 31st Oct 2018</b></span>
+
+<h2>Case Report Form Guidelines</h2>
+
+<p class="lead">Please follow guidelines given below before submitting the case report.</p>
+<ul class="lead">
+	<li>Length of abstract : 150-250 words</li>
+	<li>Length full case report: 1500-2500</li>
+	<li>PPT slide presentation: 8-10 slides</li>
+</ul>
+
+<h2>Case Report Guidelines - 2013 CARE Checklist </h2>
+<ol type="1" class="lead">
+
+	<li><span style="color:brown;"><b>Title</b></span> – The area of focus and “case report” should appear in the title</li><br>
+
+	<li><span style="color:brown;"><b>Key Words</b></span> – Two to five key words that identify topics in this case report</li><br>
+
+	<li><span style="color:brown;"><b>Abstract</b></span> – (structure or unstructured)
+		<ul class="lead">
+			<li>Introduction – What is unique and why is it important?</li>
+			<li>The patient’s main concerns and important clinical findings.</li>
+			<li>The main diagnoses, interventions, and outcomes.</li>
+			<li>Conclusion—What are one or more “take-away” lessons?</li>
+		</ul>
+	</li><br>
+
+	<li><span style="color:brown;"><b>Introduction</b></span> – Briefly summarize why this case is unique with medical literature references.</li><br>
+
+	<li><span style="color:brown;"><b>Patient Information</b></span>
+	<ul class="lead">
+		<li>De-identified demographic and other patient information.</li>
+		<li>Main concerns and symptoms of the patient.</li>
+		<li>Medical, family, and psychosocial history including genetic information.</li>
+		<li>Relevant past interventions and their outcomes.</li>
+	</ul>
+	</li><br>
+
+	<li><span style="color:brown;"><b>Clinical Findings</b></span> – Relevant physical examination (PE) and other clinical findings.</li><br>
+
+	<li><span style="color:brown;"><b>Timeline</b></span> – Relevant data from this episode of care organized as a timeline (figure or table)</li><br>
+
+	<li><span style="color:brown;"><b>Diagnostic Assessment</b></span>
+	<ul class="lead">
+		<li>Diagnostic methods (PE, laboratory testing, imaging, surveys).</li>
+		<li>Diagnostic challenges.</li>
+		<li>Diagnostic reasoning including differential diagnosis.</li>
+		<li>Prognostic characteristics when applicable.</li>
+	</ul>
+	</li><br>
+
+	<li><span style="color:brown;"><b>Therapeutic Intervention</b></span>
+	<ul class="lead">
+		<li>Types of intervention (pharmacologic, surgical, preventive).</li>
+		<li>Administration of intervention (dosage, strength, duration).</li>
+		<li>Changes in the interventions with explanations.</li>
+	</ul>
+	</li><br>
+
+	<li><span style="color:brown;"><b>Follow-up and Outcomes</b></span>
+	<ul class="lead">
+		<li>Clinician and patient-assessed outcomes when appropriate.</li>
+		<li>Important follow-up diagnostic and other test results.</li>
+		<li>Intervention adherence and tolerability (how was this assessed)?</li>
+		<li>Adverse and unanticipated events.</li>
+	</ul>
+	</li><br>
+
+	<li><span style="color:brown;"><b>Discussion</b></span>
+	<ul class="lead">
+		<li>Strengths and limitations in your approach to this case.</li>
+		<li>Discussion of the relevant medical literature.</li>
+		<li>The rationale for your conclusions.</li>
+		<li>The primary “take-away” lessons from this case report.</li>
+	</ul>
+	</li>
+
+	<li><span style="color:brown;"><b>Patient Perspective</b></span> - The patient can share their perspective on the case.</li><br>
+
+	<li><span style="color:brown;"><b>Informed Consent</b></span> - The patient should be given informed consent.</li><br>
+
+</ol>
+</p>
+
+
 
 {% endblock %}
