--- a/templates/pages/rev.html
+++ b/templates/pages/rev.html
@@ -51,7 +51,7 @@
           <div>
            <strong>Title</strong>: {{ file['title'] }}<br>
            <strong>Publisher Mail</strong>: {{ file['user_email'] }}<br>
-            <a href="https://s3.amazonaws.com/zappa-jepozm5pw/{{ file['filename'] }}"><i class="fa fa-download"></i></a><br>
+            <a href="https://s3.amazonaws.com/zappa-jepozm5pw/{{ file['filename'] }}">Download</a><br>
             <a href="{{ url_for('paper_accept',title=file['title']) }}">Accept</a><br><br>
             <a href="{{ url_for('paper_revision',title=file['title']) }}">Request Review</a><br><br>
             <a href="{{ url_for('paper_reject',title=file['title']) }}">Reject</a><br><br>
