add info about conference

--- a/templates/pages/placeholder.home.html
+++ b/templates/pages/placeholder.home.html
@@ -3,8 +3,26 @@
 {% block content %}
 <br>
 <div class="page-header">
-  <h1>The Open Research Web Space</h1>
+ <h1 style="color:blue;">Clinical Rheumatology Conference-2019</h1>
 </div>
-<p class="lead">A research publication platform where scientists, students and researchers can publish their papers at a gratuitous charge reviewed by experts from the world's most renowned institutions. <p>
+<ul class="lead" style="color:purple;">
+	<li><b>Case based approach</b></li>
+	<li><b>Problem based learning</b></li>
+	<li><b>Eminence based teaching</b></li>
+</ul>
+
+<p class="lead">The <b>Rheumatology and Clinical Immunology Department, KIMS HospitalsTM, Secunderabad</b> is organising <b>Clinical Rheumatology Conference on 5th & 6th January, 2019 (Saturday & Sunday)</b>.<br>
+The conference highlights selected Clinical Cases, with an emphasis on case based approach, problem based learning and eminence based discussions by renowned Rheumatologists. Please send in the prime cases of your career and win the best prizes in respective categories.<br></p>
+
+<p class="lead">
+The <span style="color:blue"><b>Scientific Committee Chairperson is Prof Liza Rajasekhar</b></span>.<br><br>
+
+Each session is for 90 min. Four cases will be selected for each topic. These cases will be sent to the faculty well in advance. The selected case will be presented by the Case Presenter. The Presenter can be a trainee, consultant or a teaching faculty. For each case 8-10 minutes is allotted for presentation and 5 minutes for discussion. After presentation of all the 4 cases, the Chief Discussant will take over the dais. The Chief Discussant will discuss on the key questions originating from these 4 cases for the next 25 min, followed by Q&A for 5 min.<br><br>
+
+In <span style="color:red"><b>Rapid fire session</b></span> (ultra short cases) each case is allotted 3-5 min(including discussion).<br><br>
+
+<span style="color:magenta"><b>Rheumatology Quiz for trainees</b></span>: All the trainees are encouraged to participate in the quiz. Top 3 winners (no groups) will be awarded.
+</p>
 
 {% endblock %}
+
