Final Conference commit

--- a/templates/pages/pub.html
+++ b/templates/pages/pub.html
@@ -36,7 +36,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'b
          <br>
          <br>
          Journal Title: <input type = "text" name="Title"><br><br>
-         <input type = "file" name = "file"><br>
+         <input type = "file" name = "file" multiple><br>
          <input type = "submit"/><br>
       </form>
       <br>
